--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -35,11 +35,27 @@ h1 {
   font-weight: 600;
   letter-spacing: -0.03em;
   line-height: 1.05;
-}
 
-h1 b {
-  color: #ff0000;
-  font-weight: inherit;
+  @include sm {
+    font-size: 5vw;
+  }
+
+  &.title--big {
+    font-size: 56px;
+
+    @include sm {
+      font-size: 64px;
+    }
+
+    @include rwd(711.111111111) {
+      font-size: 9vw;
+    }
+  }
+
+  b {
+    color: #ff0000;
+    font-weight: inherit;
+  }
 }
 
 .section {
@@ -90,18 +106,6 @@ h1 b {
 
       &:not(:last-child) {
         margin-bottom: 48px;
-      }
-
-      @include sm {
-        font-size: 5vw;
-      }
-
-      &.title--big {
-        font-size: 96px;
-
-        @include rwd(1066.66666667) {
-          font-size: 9vw;
-        }
       }
     }
 
