--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -33,7 +33,7 @@ h1 {
   margin: 0;
   font-size: 48px;
   font-weight: 600;
-  letter-spacing: -0.03em;
+  letter-spacing: -0.022em;
   line-height: 1.05;
 
   @include sm {
@@ -56,6 +56,14 @@ h1 {
     color: #ff0000;
     font-weight: inherit;
   }
+}
+
+h2 {
+  font-size: 40px;
+  margin: 0;
+  font-weight: 600;
+  letter-spacing: -0.022em;
+  line-height: 1.1;
 }
 
 .section {
@@ -89,6 +97,23 @@ h1 {
   }
 }
 
+.highlighed-icon {
+  background-color: #fff;
+  border-radius: 50%;
+  width: 64px;
+  height: 64px;
+  padding: 12px;
+  box-sizing: border-box;
+  background-color: rgba(255, 0, 0, 0.082);
+  margin-bottom: 32px;
+
+  svg {
+    stroke: #ff0000;
+    height: 100%;
+    width: 100%;
+  }
+}
+
 .container {
   margin: 0 auto;
   display: grid;
@@ -105,15 +130,15 @@ h1 {
 
   > div {
     h1 {
-      margin: 0;
+      margin-bottom: 48px;
+    }
 
-      &:not(:last-child) {
-        margin-bottom: 48px;
-      }
+    h2 {
+      margin-bottom: 16px;
     }
 
     > *:not(:first-child) {
-      margin-top: 32px;
+      margin-top: 16px;
     }
   }
 }
