Fix iOS buttons

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -207,6 +207,11 @@ form {
 
   input {
     border: none;
+    input {
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
+    }
   }
 
   textarea {
